<resources>
    <string name="app_name">Monumentos Sorianos</string>
    <string name="new_monument">New Monument</string>
    <string name="show_monuments">Show Monuments</string>
    <string name="preferences">Preferences</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="preview">Preview</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="listLabel">Monument list</string>

    <string name="name">Name: </string>
    <string name="name_placeholder">Monument name</string>
    <string name="type">Type: </string>
    <string name="address">Address:</string>
    <string name="address_placeholder">My address nº1</string>
    <string name="tel_number">Telephone number: </string>
    <string name="tel_number_placeholder">901001100</string>
    <string name="ulr">Url: </string>
    <string name="ulr_placeholder">http://example.com</string>
    <string name="comment">Comment: </string>
    <string name="comment_placeholder">This is a comment</string>

    <string name="action_settings">Settings</string>
    <string name="about_text">Este programa ha sido desarrollado como ejemplo en el curso de Android para demostrar cómo se pueden lanzar nuevas actividades desde la actividad principal.</string>
</resources>