<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreviewActivity">

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previewLabel" />

    <TextView
        android:id="@+id/newName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/nameLabel"
        app:layout_constraintTop_toTopOf="@+id/nameLabel" />

    <TextView
        android:id="@+id/newType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/typeLabel"
        app:layout_constraintTop_toTopOf="@+id/typeLabel" />

    <TextView
        android:id="@+id/newComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/commentlabel"
        app:layout_constraintTop_toTopOf="@+id/commentlabel" />

    <TextView
        android:id="@+id/newAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/addressLabel"
        app:layout_constraintTop_toTopOf="@+id/addressLabel" />

    <TextView
        android:id="@+id/addressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/address"
        app:layout_constraintStart_toStartOf="@+id/typeLabel"
        app:layout_constraintTop_toBottomOf="@+id/typeLabel" />

    <TextView
        android:id="@+id/newPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/phoneLabel"
        app:layout_constraintTop_toTopOf="@+id/phoneLabel" />

    <TextView
        android:id="@+id/urlLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ulr"
        app:layout_constraintStart_toStartOf="@+id/phoneLabel"
        app:layout_constraintTop_toBottomOf="@+id/phoneLabel" />

    <TextView
        android:id="@+id/newUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/urlLabel"
        app:layout_constraintTop_toTopOf="@+id/urlLabel" />

    <TextView
        android:id="@+id/phoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tel_number"
        app:layout_constraintStart_toStartOf="@+id/addressLabel"
        app:layout_constraintTop_toBottomOf="@+id/addressLabel" />

    <TextView
        android:id="@+id/commentlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/comment"
        app:layout_constraintStart_toStartOf="@+id/urlLabel"
        app:layout_constraintTop_toBottomOf="@+id/urlLabel" />

    <TextView
        android:id="@+id/typeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/type"
        app:layout_constraintStart_toStartOf="@+id/nameLabel"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="save"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commentlabel" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="discard"
        android:text="@string/discard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commentlabel" />

    <TextView
        android:id="@+id/previewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/preview"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previewLabel" />
</androidx.constraintlayout.widget.ConstraintLayout>